tests/should_fail/syntax_empty_tuple_type.nv
module main

// SHOULD FAIL: tuple type annotation with zero elements
// parser: "Tuple must contain at least two elements"
fn foo(t: ()) -> Int {
    return 0
}
println(foo(()))
